Co-authored-by: nofar5353 <nofar5353@users.noreply.github.com>

--- a/src/css/cards.css
+++ b/src/css/cards.css
@@ -20,6 +20,7 @@
 }
 
 /* Handle on hover */
-::-webkit-scrollbar-thumb:hover {
+::-webkit-scrollbar-thumb:hover,
+::-webkit-scrollbar-thumb:active {
   background: #7b1fa2;
 }
